use lazy fetch type
also delete unused methods and cleanup code