@@ -2,29 +2,20 @@ package org.nocontrib.security;
 
 import java.util.Date;
 import java.util.List;
-import java.util.stream.Collectors;
 import org.nocontrib.account.Account;
 import org.nocontrib.role.Role;
 import org.springframework.security.core.GrantedAuthority;
-import org.springframework.security.core.authority.SimpleGrantedAuthority;
 
 public final class UserDetailsImplProducer {
 
-  public static UserDetailsImpl produce(Account account) {
+  public static UserDetailsImpl produce(Account account, List<Role> roles) {
     Date lastPasswordResetDate = new Date(); // TODO: Fix it
-    List<GrantedAuthority> authorities = toGrantedAuthorities(account.getRoleList());
-    UserDetailsImpl details = new UserDetailsImpl(account.getId(), account.getUsername(),
-        account.getPassword(), account.getName(), account.getEmail(), account.getCreated(),
-        account.getStatus(), lastPasswordResetDate, authorities);
-    return details;
+    return new UserDetailsImpl(account.getId(), account.getUsername(), account.getPassword(),
+        account.getName(), account.getEmail(), account.getCreated(), account.getStatus(),
+        lastPasswordResetDate, mapGrantedAuthorities(roles));
   }
 
-  private static List<GrantedAuthority> toGrantedAuthorities(List<Role> roleList) {
-    List<GrantedAuthority> list = roleList.stream().map(role -> {
-      String name = role.getName();
-      GrantedAuthority authority = new SimpleGrantedAuthority(name);
-      return authority;
-    }).collect(Collectors.toList());
-    return list;
+  private static List<GrantedAuthority> mapGrantedAuthorities(List<Role> roles) {
+    return roles.stream().map(role -> (GrantedAuthority) role::getName).toList();
   }
 }
